--- a/index.html
+++ b/index.html
@@ -2,45 +2,88 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Reinmedia</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Reinmedia - Solusi Pewarna Rambut Uban</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <!-- HEADER -->
+  <header class="header-premium">
+    <div class="container">
+      <h1 class="logo">Reinmedia</h1>
+      <nav class="nav-premium">
+        <a href="index.html">Home</a>
+        <a href="katalog.html">Katalog</a>
+        <a href="bandingkan.html">Perbandingan</a>
+        <a href="edukasi.html">Edukasi</a>
+      </nav>
+    </div>
+  </header>
 
-<header class="header">
-  <h1 class="logo">Reinmedia</h1>
-  <nav>
-    <a href="index.html">Beranda</a>
-    <a href="katalog.html">Katalog</a>
-    <a href="bandingkan.html">Bandingkan</a>
-    <a href="edukasi.html">Edukasi</a>
-  </nav>
-</header>
+  <!-- HERO SECTION -->
+  <section class="hero-premium">
+    <div class="container hero-grid">
+      <div class="hero-text">
+        <h2>Solusi Praktis<br>Ubah Warna Rambut Anda</h2>
+        <p>Pilih shampoo pewarna uban terbaik dari brand terpercaya, bandingkan, lalu beli langsung.</p>
+        <div class="hero-actions">
+          <a href="katalog.html" class="btn-primary">Lihat Produk</a>
+          <a href="bandingkan.html" class="btn-outline">Bandingkan</a>
+        </div>
+      </div>
+      <div class="hero-image">
+        <img src="assets/images/myiwe-natural-black.jpg" alt="Produk Reinmedia">
+      </div>
+    </div>
+  </section>
 
-<section class="hero">
-  <h2>Platform Cerdas Memilih Shampoo Pewarna Uban</h2>
-  <p>Bukan sekadar katalog, tapi sistem bantu keputusan sebelum beli di Shopee.</p>
-  <a href="katalog.html" class="btn">Jelajahi Produk</a>
-</section>
+  <!-- FEATURE SECTION -->
+  <section class="feature-premium">
+    <div class="container">
+      <h3 class="section-title">Kenapa Pilih Reinmedia?</h3>
+      <div class="feature-grid">
+        <div class="feature-card">
+          <h4>Cepat & Praktis</h4>
+          <p>Tanpa ribet, hasil langsung terlihat.</p>
+        </div>
+        <div class="feature-card">
+          <h4>Aman Digunakan</h4>
+          <p>Formulasi lembut untuk kulit kepala.</p>
+        </div>
+        <div class="feature-card">
+          <h4>Produk Terverifikasi</h4>
+          <p>Hanya brand terpercaya.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
-<section class="info">
-  <div class="info-card">
-    <h3>Kurasi Produk</h3>
-    <p>Hanya produk terbaik yang kami tampilkan.</p>
-  </div>
-  <div class="info-card">
-    <h3>Perbandingan</h3>
-    <p>Bandingkan Myiwe dan Aestika dengan mudah.</p>
-  </div>
-  <div class="info-card">
-    <h3>Edukasi</h3>
-    <p>Pelajari cara memilih shampoo yang tepat.</p>
-  </div>
-</section>
+  <!-- BRAND SECTION -->
+  <section class="brand-premium">
+    <div class="container">
+      <h3 class="section-title">Brand Unggulan</h3>
+      <div class="brand-grid">
+        <div class="brand-card">
+          <img src="assets/images/myiwe-natural-black.jpg" alt="Myiwe">
+          <h4>Myiwe</h4>
+          <p>Warna intens & tahan lama.</p>
+          <a href="katalog.html" class="btn-secondary">Lihat Produk</a>
+        </div>
+        <div class="brand-card">
+          <img src="assets/images/aestika-black.jpg" alt="Aestika">
+          <h4>Aestika</h4>
+          <p>Lembut & alami.</p>
+          <a href="katalog.html" class="btn-secondary">Lihat Produk</a>
+        </div>
+      </div>
+    </div>
+  </section>
 
-<footer>
-  <p>&copy; 2026 Reinmedia</p>
-</footer>
-
+  <!-- FOOTER -->
+  <footer class="footer-premium">
+    <div class="container">
+      <p>&copy; 2026 Reinmedia. All rights reserved.</p>
+    </div>
+  </footer>
 </body>
 </html>
