--- a/katalog.html
+++ b/katalog.html
@@ -2,40 +2,50 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Katalog Produk - Reinmedia</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-<header class="header">
-  <h1 class="logo">Reinmedia</h1>
-  <nav>
-    <a href="index.html">Beranda</a>
-    <a href="katalog.html" class="active">Katalog</a>
-    <a href="bandingkan.html">Bandingkan</a>
-    <a href="edukasi.html">Edukasi</a>
-  </nav>
+<header class="header-premium">
+  <div class="container">
+    <h1 class="logo">Reinmedia</h1>
+    <nav class="nav-premium">
+      <a href="index.html">Home</a>
+      <a href="katalog.html">Katalog</a>
+      <a href="bandingkan.html">Perbandingan</a>
+      <a href="edukasi.html">Edukasi</a>
+    </nav>
+  </div>
 </header>
 
-<section class="hero-small">
-  <h2>Katalog Produk</h2>
-  <p>Pilih shampoo pewarna uban sesuai kebutuhanmu</p>
+<section class="hero-premium">
+  <div class="container">
+    <h2>Katalog Produk</h2>
+    <p>Pilih warna dan brand yang sesuai dengan kebutuhanmu</p>
+  </div>
 </section>
 
 <section class="filter-section">
-  <input type="text" id="searchInput" placeholder="Cari produk..." />
-  
-  <select id="brandFilter">
-    <option value="all">Semua Merek</option>
-    <option value="Myiwe">Myiwe</option>
-    <option value="Aestika">Aestika</option>
-  </select>
+  <div class="container">
+    <input type="text" id="searchInput" placeholder="Cari produk...">
+    <select id="brandFilter">
+      <option value="all">Semua Brand</option>
+      <option value="Myiwe">Myiwe</option>
+      <option value="Aestika">Aestika</option>
+    </select>
+  </div>
 </section>
 
-<section id="product-list"></section>
+<section class="container">
+  <div id="product-list"></div>
+</section>
 
-<footer>
-  <p>&copy; 2026 Reinmedia</p>
+<footer class="footer-premium">
+  <div class="container">
+    <p>&copy; 2026 Reinmedia. All rights reserved.</p>
+  </div>
 </footer>
 
 <script src="js/data.js"></script>
