--- a/bandingkan.html
+++ b/bandingkan.html
@@ -2,58 +2,59 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Bandingkan Produk - Reinmedia</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Perbandingan Produk - Reinmedia</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-<header class="header">
-  <h1 class="logo">Reinmedia</h1>
-  <nav>
-    <a href="index.html">Beranda</a>
-    <a href="katalog.html">Katalog</a>
-    <a href="bandingkan.html">Bandingkan</a>
-    <a href="edukasi.html">Edukasi</a>
-  </nav>
+<header class="header-premium">
+  <div class="container">
+    <h1 class="logo">Reinmedia</h1>
+    <nav class="nav-premium">
+      <a href="index.html">Home</a>
+      <a href="katalog.html">Katalog</a>
+      <a href="bandingkan.html">Perbandingan</a>
+      <a href="edukasi.html">Edukasi</a>
+    </nav>
+  </div>
 </header>
 
-<section class="hero-small">
-  <h2>Perbandingan Produk</h2>
-  <p>Bandingkan Myiwe dan Aestika sebelum membeli</p>
+<section class="hero-premium">
+  <div class="container">
+    <h2>Perbandingan Produk</h2>
+    <p>Bandingkan Myiwe dan Aestika sebelum membeli</p>
+  </div>
 </section>
 
-<section style="padding:20px; max-width:900px; margin:auto;">
-  <table border="1" width="100%" cellpadding="10" style="border-collapse:collapse; background:white;">
-    <tr>
-      <th>Fitur</th>
-      <th>Myiwe</th>
-      <th>Aestika</th>
-    </tr>
-    <tr>
-      <td>Hasil Warna</td>
-      <td>Natural</td>
-      <td>Lebih pekat</td>
-    </tr>
-    <tr>
-      <td>Waktu Pewarnaan</td>
-      <td>5 menit</td>
-      <td>10 menit</td>
-    </tr>
-    <tr>
-      <td>Kulit Sensitif</td>
-      <td>Cocok</td>
-      <td>Cukup cocok</td>
-    </tr>
-    <tr>
-      <td>Ketahanan Warna</td>
-      <td>2–3 minggu</td>
-      <td>3–4 minggu</td>
-    </tr>
-  </table>
+<section class="container" style="padding:60px 20px;">
+  <div class="compare-grid">
+    <div class="compare-card">
+      <h3>Myiwe</h3>
+      <ul>
+        <li>✔ Warna intens & tahan lama</li>
+        <li>✔ Praktis digunakan</li>
+        <li>✔ Cocok untuk uban tebal</li>
+        <li>✔ Hasil cepat</li>
+      </ul>
+    </div>
+
+    <div class="compare-card">
+      <h3>Aestika</h3>
+      <ul>
+        <li>✔ Lembut di kulit kepala</li>
+        <li>✔ Warna natural</li>
+        <li>✔ Cocok untuk pemula</li>
+        <li>✔ Aroma lembut</li>
+      </ul>
+    </div>
+  </div>
 </section>
 
-<footer>
-  <p>&copy; 2026 Reinmedia</p>
+<footer class="footer-premium">
+  <div class="container">
+    <p>&copy; 2026 Reinmedia. All rights reserved.</p>
+  </div>
 </footer>
 
 </body>
