--- a/edukasi.html
+++ b/edukasi.html
@@ -2,44 +2,59 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Edukasi - Reinmedia</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-<header class="header">
-  <h1 class="logo">Reinmedia</h1>
-  <nav>
-    <a href="index.html">Beranda</a>
-    <a href="katalog.html">Katalog</a>
-    <a href="bandingkan.html">Bandingkan</a>
-    <a href="edukasi.html">Edukasi</a>
-  </nav>
+<header class="header-premium">
+  <div class="container">
+    <h1 class="logo">Reinmedia</h1>
+    <nav class="nav-premium">
+      <a href="index.html">Home</a>
+      <a href="katalog.html">Katalog</a>
+      <a href="bandingkan.html">Perbandingan</a>
+      <a href="edukasi.html">Edukasi</a>
+    </nav>
+  </div>
 </header>
 
-<section class="hero-small">
-  <h2>Edukasi Perawatan Rambut Beruban</h2>
-  <p>Pelajari sebelum membeli</p>
+<section class="hero-premium">
+  <div class="container">
+    <h2>Edukasi Perawatan Rambut</h2>
+    <p>Pelajari cara merawat rambut dan memilih warna yang tepat</p>
+  </div>
 </section>
 
-<section style="padding:20px; max-width:800px; margin:auto; background:white;">
-  <h3>Apa penyebab uban?</h3>
-  <p>Uban terjadi karena berkurangnya melanin pada rambut. Faktor genetik, usia, dan stres juga memengaruhi.</p>
+<section class="container" style="padding:60px 20px;">
+  <div class="edu-grid">
 
-  <h3>Kenapa memilih shampoo pewarna?</h3>
-  <p>Lebih praktis, tidak ribet, dan bisa digunakan sendiri di rumah.</p>
+    <div class="edu-card">
+      <h3>Kenapa Rambut Bisa Beruban?</h3>
+      <p>Rambut beruban terjadi karena berkurangnya produksi melanin. Faktor usia, genetik, dan stres dapat mempercepat proses ini.</p>
+      <a href="#" class="btn-secondary">Baca Selengkapnya</a>
+    </div>
 
-  <h3>Tips memilih shampoo pewarna:</h3>
-  <ul>
-    <li>Pilih warna natural</li>
-    <li>Pastikan aman untuk kulit sensitif</li>
-    <li>Cek ketahanan warna</li>
-    <li>Baca review pengguna</li>
-  </ul>
+    <div class="edu-card">
+      <h3>Tips Memilih Warna yang Tepat</h3>
+      <p>Pilih warna yang sesuai dengan tone kulit agar terlihat lebih natural dan percaya diri.</p>
+      <a href="#" class="btn-secondary">Baca Selengkapnya</a>
+    </div>
+
+    <div class="edu-card">
+      <h3>Perawatan Rambut Setelah Pewarnaan</h3>
+      <p>Gunakan shampoo khusus dan hindari paparan panas berlebih agar warna tahan lama.</p>
+      <a href="#" class="btn-secondary">Baca Selengkapnya</a>
+    </div>
+
+  </div>
 </section>
 
-<footer>
-  <p>&copy; 2026 Reinmedia</p>
+<footer class="footer-premium">
+  <div class="container">
+    <p>&copy; 2026 Reinmedia. All rights reserved.</p>
+  </div>
 </footer>
 
 </body>
