--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Reinmedia - Solusi Pewarna Rambut Uban</title>
-  <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Reinmedia – Solusi Pewarna Rambut Uban</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <!-- HEADER -->
-  <header class="header-premium">
-    <div class="container">
+  <header class="header">
+    <div class="container nav-wrap">
       <h1 class="logo">Reinmedia</h1>
-      <nav class="nav-premium">
-        <a href="index.html">Home</a>
+      <nav class="nav">
+        <a href="index.html" class="active">Home</a>
         <a href="katalog.html">Katalog</a>
         <a href="bandingkan.html">Perbandingan</a>
         <a href="edukasi.html">Edukasi</a>
@@ -20,15 +19,14 @@
     </div>
   </header>
 
-  <!-- HERO SECTION -->
-  <section class="hero-premium">
+  <section class="home-hero">
     <div class="container hero-grid">
       <div class="hero-text">
-        <h2>Solusi Praktis<br>Ubah Warna Rambut Anda</h2>
-        <p>Pilih shampoo pewarna uban terbaik dari brand terpercaya, bandingkan, lalu beli langsung.</p>
+        <h2>Warna Rambut Natural,<br>Tanpa Ribet</h2>
+        <p>Pilih shampoo pewarna uban terbaik, bandingkan, lalu beli langsung dari toko resmi Reinmedia.</p>
         <div class="hero-actions">
-          <a href="katalog.html" class="btn-primary">Lihat Produk</a>
-          <a href="bandingkan.html" class="btn-outline">Bandingkan</a>
+          <a href="katalog.html" class="btn-buy">Lihat Katalog</a>
+          <a href="bandingkan.html" class="btn-detail">Bandingkan</a>
         </div>
       </div>
       <div class="hero-image">
@@ -37,50 +35,24 @@
     </div>
   </section>
 
-  <!-- FEATURE SECTION -->
-  <section class="feature-premium">
-    <div class="container">
-      <h3 class="section-title">Kenapa Pilih Reinmedia?</h3>
-      <div class="feature-grid">
-        <div class="feature-card">
-          <h4>Cepat & Praktis</h4>
-          <p>Tanpa ribet, hasil langsung terlihat.</p>
-        </div>
-        <div class="feature-card">
-          <h4>Aman Digunakan</h4>
-          <p>Formulasi lembut untuk kulit kepala.</p>
-        </div>
-        <div class="feature-card">
-          <h4>Produk Terverifikasi</h4>
-          <p>Hanya brand terpercaya.</p>
-        </div>
+  <section class="home-features">
+    <div class="container product-grid">
+      <div class="product-card">
+        <h3>Praktis</h3>
+        <p>Tidak perlu ke salon, cukup dari rumah.</p>
+      </div>
+      <div class="product-card">
+        <h3>Natural</h3>
+        <p>Hasil warna lembut dan terlihat alami.</p>
+      </div>
+      <div class="product-card">
+        <h3>Aman</h3>
+        <p>Diformulasikan untuk kenyamanan kulit kepala.</p>
       </div>
     </div>
   </section>
 
-  <!-- BRAND SECTION -->
-  <section class="brand-premium">
-    <div class="container">
-      <h3 class="section-title">Brand Unggulan</h3>
-      <div class="brand-grid">
-        <div class="brand-card">
-          <img src="assets/images/myiwe-natural-black.jpg" alt="Myiwe">
-          <h4>Myiwe</h4>
-          <p>Warna intens & tahan lama.</p>
-          <a href="katalog.html" class="btn-secondary">Lihat Produk</a>
-        </div>
-        <div class="brand-card">
-          <img src="assets/images/aestika-black.jpg" alt="Aestika">
-          <h4>Aestika</h4>
-          <p>Lembut & alami.</p>
-          <a href="katalog.html" class="btn-secondary">Lihat Produk</a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- FOOTER -->
-  <footer class="footer-premium">
+  <footer class="footer">
     <div class="container">
       <p>&copy; 2026 Reinmedia. All rights reserved.</p>
     </div>
