--- a/bandingkan.html
+++ b/bandingkan.html
@@ -1,61 +1,60 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Perbandingan Produk - Reinmedia</title>
-  <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Perbandingan Produk – Reinmedia</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-
-<header class="header-premium">
-  <div class="container">
-    <h1 class="logo">Reinmedia</h1>
-    <nav class="nav-premium">
-      <a href="index.html">Home</a>
-      <a href="katalog.html">Katalog</a>
-      <a href="bandingkan.html">Perbandingan</a>
-      <a href="edukasi.html">Edukasi</a>
-    </nav>
-  </div>
-</header>
-
-<section class="hero-premium">
-  <div class="container">
-    <h2>Perbandingan Produk</h2>
-    <p>Bandingkan Myiwe dan Aestika sebelum membeli</p>
-  </div>
-</section>
-
-<section class="container" style="padding:60px 20px;">
-  <div class="compare-grid">
-    <div class="compare-card">
-      <h3>Myiwe</h3>
-      <ul>
-        <li>✔ Warna intens & tahan lama</li>
-        <li>✔ Praktis digunakan</li>
-        <li>✔ Cocok untuk uban tebal</li>
-        <li>✔ Hasil cepat</li>
-      </ul>
+  <header class="header">
+    <div class="container nav-wrap">
+      <h1 class="logo">Reinmedia</h1>
+      <nav class="nav">
+        <a href="index.html">Home</a>
+        <a href="katalog.html">Katalog</a>
+        <a href="bandingkan.html" class="active">Perbandingan</a>
+        <a href="edukasi.html">Edukasi</a>
+      </nav>
     </div>
+  </header>
 
-    <div class="compare-card">
-      <h3>Aestika</h3>
-      <ul>
-        <li>✔ Lembut di kulit kepala</li>
-        <li>✔ Warna natural</li>
-        <li>✔ Cocok untuk pemula</li>
-        <li>✔ Aroma lembut</li>
-      </ul>
+  <section class="catalog-hero">
+    <div class="container">
+      <h2>Bandingkan Produk</h2>
+      <p>Lihat perbedaan Myiwe dan Aestika sebelum membeli</p>
     </div>
-  </div>
-</section>
+  </section>
 
-<footer class="footer-premium">
-  <div class="container">
-    <p>&copy; 2026 Reinmedia. All rights reserved.</p>
-  </div>
-</footer>
+  <section class="catalog-section">
+    <div class="container">
+      <div class="product-grid">
+        <div class="product-card">
+          <h3>Myiwe</h3>
+          <p class="product-desc">Cocok untuk yang ingin hasil cepat, warna intens, dan praktis.</p>
+          <ul class="product-desc">
+            <li>✔ Warna lebih pekat</li>
+            <li>✔ Hasil cepat</li>
+            <li>✔ Cocok untuk uban tebal</li>
+          </ul>
+        </div>
+        <div class="product-card">
+          <h3>Aestika</h3>
+          <p class="product-desc">Cocok untuk yang ingin hasil natural dan lembut.</p>
+          <ul class="product-desc">
+            <li>✔ Warna natural</li>
+            <li>✔ Lembut di kulit kepala</li>
+            <li>✔ Cocok untuk pemula</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <footer class="footer">
+    <div class="container">
+      <p>&copy; 2026 Reinmedia. All rights reserved.</p>
+    </div>
+  </footer>
 </body>
 </html>
