--- a/index.html
+++ b/index.html
@@ -1,61 +1,63 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Reinmedia – Solusi Pewarna Rambut Uban</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Reinmedia – Solusi Warna Rambut Alami</title>
+  <meta name="description" content="Reinmedia adalah katalog premium shampoo pewarna rambut uban. Bandingkan Myiwe & Aestika, lalu beli langsung di Shopee.">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header class="header">
-    <div class="container nav-wrap">
-      <h1 class="logo">Reinmedia</h1>
-      <nav class="nav">
-        <a href="index.html" class="active">Home</a>
-        <a href="katalog.html">Katalog</a>
-        <a href="bandingkan.html">Perbandingan</a>
-        <a href="edukasi.html">Edukasi</a>
-      </nav>
-    </div>
-  </header>
 
-  <section class="home-hero">
-    <div class="container hero-grid">
-      <div class="hero-text">
-        <h2>Warna Rambut Natural,<br>Tanpa Ribet</h2>
-        <p>Pilih shampoo pewarna uban terbaik, bandingkan, lalu beli langsung dari toko resmi Reinmedia.</p>
-        <div class="hero-actions">
-          <a href="katalog.html" class="btn-buy">Lihat Katalog</a>
-          <a href="bandingkan.html" class="btn-detail">Bandingkan</a>
-        </div>
-      </div>
-      <div class="hero-image">
-        <img src="assets/images/myiwe-natural-black.jpg" alt="Produk Reinmedia">
-      </div>
-    </div>
-  </section>
+<header class="header">
+  <div class="container nav-wrap">
+    <h1 class="logo">Reinmedia</h1>
+    <nav class="nav">
+      <a href="index.html" class="active">Home</a>
+      <a href="katalog.html">Katalog</a>
+      <a href="bandingkan.html">Perbandingan</a>
+      <a href="edukasi.html">Edukasi</a>
+    </nav>
+  </div>
+</header>
 
-  <section class="home-features">
-    <div class="container product-grid">
+<section class="hero">
+  <div class="container">
+    <h1>Warna Rambut Natural,<br>Tanpa Ribet</h1>
+    <p>Pilih shampoo pewarna uban terbaik, bandingkan, lalu beli langsung dari toko resmi Reinmedia.</p>
+
+    <div class="hero-buttons">
+      <a href="katalog.html" class="btn-primary">Lihat Katalog</a>
+      <a href="bandingkan.html" class="btn-outline">Bandingkan</a>
+    </div>
+  </div>
+</section>
+
+<section class="catalog-section">
+  <div class="container">
+    <h2 style="margin-bottom:16px;">Kenapa Pilih Reinmedia?</h2>
+    <div class="product-grid">
       <div class="product-card">
         <h3>Praktis</h3>
-        <p>Tidak perlu ke salon, cukup dari rumah.</p>
+        <p class="product-desc">Tanpa salon, bisa digunakan sendiri di rumah.</p>
       </div>
       <div class="product-card">
         <h3>Natural</h3>
-        <p>Hasil warna lembut dan terlihat alami.</p>
+        <p class="product-desc">Warna menyatu dengan rambut asli.</p>
       </div>
       <div class="product-card">
         <h3>Aman</h3>
-        <p>Diformulasikan untuk kenyamanan kulit kepala.</p>
+        <p class="product-desc">Dipilih dari brand terpercaya.</p>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <footer class="footer">
-    <div class="container">
-      <p>&copy; 2026 Reinmedia. All rights reserved.</p>
-    </div>
-  </footer>
+<footer class="footer">
+  <div class="container">
+    <p>&copy; 2026 Reinmedia. All rights reserved.</p>
+  </div>
+</footer>
+
 </body>
 </html>
