--- a/bandingkan.html
+++ b/bandingkan.html
@@ -1,60 +1,64 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Perbandingan Produk – Reinmedia</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bandingkan Produk – Reinmedia</title>
+  <meta name="description" content="Bandingkan shampoo pewarna rambut uban Myiwe dan Aestika sebelum membeli. Pilih yang paling cocok untukmu.">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header class="header">
-    <div class="container nav-wrap">
-      <h1 class="logo">Reinmedia</h1>
-      <nav class="nav">
-        <a href="index.html">Home</a>
-        <a href="katalog.html">Katalog</a>
-        <a href="bandingkan.html" class="active">Perbandingan</a>
-        <a href="edukasi.html">Edukasi</a>
-      </nav>
-    </div>
-  </header>
 
-  <section class="catalog-hero">
-    <div class="container">
-      <h2>Bandingkan Produk</h2>
-      <p>Lihat perbedaan Myiwe dan Aestika sebelum membeli</p>
-    </div>
-  </section>
+<header class="header">
+  <div class="container nav-wrap">
+    <h1 class="logo">Reinmedia</h1>
+    <nav class="nav">
+      <a href="index.html">Home</a>
+      <a href="katalog.html">Katalog</a>
+      <a href="bandingkan.html" class="active">Perbandingan</a>
+      <a href="edukasi.html">Edukasi</a>
+    </nav>
+  </div>
+</header>
 
-  <section class="catalog-section">
-    <div class="container">
-      <div class="product-grid">
-        <div class="product-card">
-          <h3>Myiwe</h3>
-          <p class="product-desc">Cocok untuk yang ingin hasil cepat, warna intens, dan praktis.</p>
-          <ul class="product-desc">
-            <li>✔ Warna lebih pekat</li>
-            <li>✔ Hasil cepat</li>
-            <li>✔ Cocok untuk uban tebal</li>
-          </ul>
-        </div>
-        <div class="product-card">
-          <h3>Aestika</h3>
-          <p class="product-desc">Cocok untuk yang ingin hasil natural dan lembut.</p>
-          <ul class="product-desc">
-            <li>✔ Warna natural</li>
-            <li>✔ Lembut di kulit kepala</li>
-            <li>✔ Cocok untuk pemula</li>
-          </ul>
-        </div>
+<section class="hero">
+  <div class="container">
+    <h1>Bandingkan Produk</h1>
+    <p>Lihat perbedaan Myiwe & Aestika agar tidak salah pilih.</p>
+  </div>
+</section>
+
+<section class="catalog-section">
+  <div class="container">
+    <div class="product-grid">
+      <div class="product-card">
+        <h3>Myiwe</h3>
+        <p class="product-desc">Cocok untuk kamu yang ingin hasil cepat dan warna intens.</p>
+        <ul class="product-desc">
+          <li>✔ Warna lebih pekat</li>
+          <li>✔ Proses cepat</li>
+          <li>✔ Cocok untuk uban tebal</li>
+        </ul>
+      </div>
+
+      <div class="product-card">
+        <h3>Aestika</h3>
+        <p class="product-desc">Cocok untuk kamu yang ingin hasil lembut dan natural.</p>
+        <ul class="product-desc">
+          <li>✔ Warna natural</li>
+          <li>✔ Lebih lembut</li>
+          <li>✔ Cocok pemula</li>
+        </ul>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <footer class="footer">
-    <div class="container">
-      <p>&copy; 2026 Reinmedia. All rights reserved.</p>
-    </div>
-  </footer>
+<footer class="footer">
+  <div class="container">
+    <p>&copy; 2026 Reinmedia. All rights reserved.</p>
+  </div>
+</footer>
+
 </body>
 </html>
