--- a/edukasi.html
+++ b/edukasi.html
@@ -1,54 +1,59 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Edukasi – Reinmedia</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <meta name="description" content="Pelajari tips memilih warna rambut, perawatan rambut beruban, dan cara merawat rambut setelah pewarnaan.">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header class="header">
-    <div class="container nav-wrap">
-      <h1 class="logo">Reinmedia</h1>
-      <nav class="nav">
-        <a href="index.html">Home</a>
-        <a href="katalog.html">Katalog</a>
-        <a href="bandingkan.html">Perbandingan</a>
-        <a href="edukasi.html" class="active">Edukasi</a>
-      </nav>
-    </div>
-  </header>
 
-  <section class="catalog-hero">
-    <div class="container">
-      <h2>Edukasi Perawatan Rambut</h2>
-      <p>Pelajari cara memilih warna dan merawat rambut agar tetap sehat</p>
-    </div>
-  </section>
+<header class="header">
+  <div class="container nav-wrap">
+    <h1 class="logo">Reinmedia</h1>
+    <nav class="nav">
+      <a href="index.html">Home</a>
+      <a href="katalog.html">Katalog</a>
+      <a href="bandingkan.html">Perbandingan</a>
+      <a href="edukasi.html" class="active">Edukasi</a>
+    </nav>
+  </div>
+</header>
 
-  <section class="catalog-section">
-    <div class="container">
-      <div class="product-grid">
-        <div class="product-card">
-          <h3>Kenapa Rambut Bisa Beruban?</h3>
-          <p class="product-desc">Rambut beruban terjadi karena berkurangnya produksi melanin. Faktor usia, genetik, dan stres dapat mempercepat proses ini.</p>
-        </div>
-        <div class="product-card">
-          <h3>Tips Memilih Warna yang Tepat</h3>
-          <p class="product-desc">Pilih warna yang sesuai dengan warna kulit agar terlihat natural dan tidak terlalu kontras.</p>
-        </div>
-        <div class="product-card">
-          <h3>Perawatan Setelah Pewarnaan</h3>
-          <p class="product-desc">Gunakan shampoo khusus, hindari panas berlebih, dan rajin menggunakan conditioner.</p>
-        </div>
+<section class="hero">
+  <div class="container">
+    <h1>Edukasi Rambut</h1>
+    <p>Tips dan informasi seputar rambut beruban & perawatannya.</p>
+  </div>
+</section>
+
+<section class="catalog-section">
+  <div class="container">
+    <div class="product-grid">
+      <div class="product-card">
+        <h3>Kenapa Rambut Bisa Beruban?</h3>
+        <p class="product-desc">Rambut beruban terjadi karena berkurangnya melanin. Faktor usia, genetik, dan stres dapat mempercepat proses ini.</p>
+      </div>
+
+      <div class="product-card">
+        <h3>Tips Memilih Warna</h3>
+        <p class="product-desc">Pilih warna yang mendekati warna alami agar hasil terlihat natural dan tidak mencolok.</p>
+      </div>
+
+      <div class="product-card">
+        <h3>Perawatan Setelah Pewarnaan</h3>
+        <p class="product-desc">Gunakan shampoo khusus, hindari panas berlebih, dan rutin pakai conditioner.</p>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <footer class="footer">
-    <div class="container">
-      <p>&copy; 2026 Reinmedia. All rights reserved.</p>
-    </div>
-  </footer>
+<footer class="footer">
+  <div class="container">
+    <p>&copy; 2026 Reinmedia. All rights reserved.</p>
+  </div>
+</footer>
+
 </body>
 </html>
