--- a/katalog.html
+++ b/katalog.html
@@ -42,6 +42,9 @@
   </div>
 </footer>
 
+<!-- FLOATING WHATSAPP BUTTON -->
+<a href="https://wa.me/6283130814832" class="whatsapp-float" target="_blank" aria-label="Chat via WhatsApp">💬</a>
+
 <script src="js/data.js"></script>
 <script src="js/filter.js"></script>
 
