--- a/bandingkan.html
+++ b/bandingkan.html
@@ -60,5 +60,8 @@
   </div>
 </footer>
 
+<!-- FLOATING WHATSAPP BUTTON -->
+<a href="https://wa.me/6283130814832" class="whatsapp-float" target="_blank" aria-label="Chat via WhatsApp">💬</a>
+
 </body>
 </html>
