--- a/edukasi.html
+++ b/edukasi.html
@@ -55,5 +55,8 @@
   </div>
 </footer>
 
+<!-- FLOATING WHATSAPP BUTTON -->
+<a href="https://wa.me/6283130814832" class="whatsapp-float" target="_blank" aria-label="Chat via WhatsApp">💬</a>
+
 </body>
 </html>
